k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cuenly-backend
  labels:
    name: cuenly-backend
